2013-02-09  Andreas K. Foerster  <info@akfoerster.de>

	* avtinternals.h, avtdata.h:
	don't define AVT_HIDDEN, use #pragma instead

2013-02-08  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_border3d):
	new function

2013-02-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_bar3d, avt_border3d, avt_brighter)
	(avt_horizontal_line, avt_vertical_line): new functions
	(avt_show_name): adapted

2013-01-26  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (bell): block recursion

2012-12-26  Andreas K. Foerster  <info@akfoerster.de>

	* avtdata.h, avtdata.c: don't use anonymous union
	(this was standardized in C11, but not yet in C99)

------------------------------------------------------------------------

2012-12-23  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.23.0 released

2012-12-18  Andreas K. Foerster  <info@akfoerster.de>

	* avtdata.h, avtdata.c: use object oriented approach
	avatar.c, audio-common.c: adapted

2012-12-11  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (handle_require_options):
	new syntax for -l

2012-12-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_pager):
	support numbers (number-pad when NumLock is on)

2012-12-04  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (handle_require_options):
	-l defines a global variable for the module

2012-12-01  Andreas K. Foerster  <info@akfoerster.de>

	* mingw/windowstiming.c: new file

2012-11-29  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (luaopen_akfavatar_embedded):
	new table avt.key with key codes

	* lua/lua-avt.c: avt.getcwd as alias for avt.get_directory

2012-11-28  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h:
	key codes have been changed not to conflict with the corporate zone

2012-11-25  Andreas K. Foerster  <info@akfoerster.de>

	* text2c.awk: make static variable, support page-breaks
